--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		
 		<link href="./_app/immutable/assets/app.C29fW3Ru.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ciYC4Fhz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.COTDIC_F.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BN6qpt_E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BUAKnpLn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CKRvXhpY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bc2uJOj9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CvuWBQX8.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BHJl0R7m.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.odeUhss4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DzwG5k83.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main class="p-4 mx-auto max-w-4xl"><header data-svelte-h="svelte-qwtvso"></header> <section class="mb-8"><h2 class="text-xl font-semibold" data-svelte-h="svelte-135e3dm">Identify Existing Hyperlinks</h2> <div class="flex flex-wrap gap-2 my-2"><input aria-label="Target URL" class="flex-grow p-2 border border-gray-300 rounded" placeholder="Enter target URL" type="text" value=""> <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600" data-svelte-h="svelte-xsirsi">Identify Hyperlinks</button></div> </section> <section><h2 class="text-xl font-semibold" data-svelte-h="svelte-1di0tge">Discover Hyperlink Opportunities</h2> <div class="flex flex-col gap-2 my-2"><input aria-label="Opportunities URL" class="p-2 border border-gray-300 rounded" placeholder="Enter target URL for opportunities" type="text" value=""> <textarea aria-label="Potential Anchors" class="p-2 border border-gray-300 rounded" placeholder="Enter potential anchors, separated by commas" rows="3"></textarea> <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600" data-svelte-h="svelte-1xixxot">Discover Opportunities</button></div> <div class="my-2"> </div></section> <button class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 my-4" data-svelte-h="svelte-ud93ca">Clear Results</button></main> 
+		<div style="display: contents">  <main class="p-4 mx-auto max-w-4xl"><header data-svelte-h="svelte-qwtvso"></header> <section class="mb-8"><h2 class="text-xl font-semibold" data-svelte-h="svelte-135e3dm">Identify Existing Hyperlinks</h2> <div class="flex flex-wrap gap-2 my-2"><input aria-label="Target URL" class="flex-grow p-2 border border-gray-300 rounded" placeholder="Enter target URL" type="text" value=""> <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600" data-svelte-h="svelte-xsirsi">Identify Hyperlinks</button></div> </section> <section><h2 class="text-xl font-semibold" data-svelte-h="svelte-1lkqdh4">Discover Opportunities</h2> <div class="flex flex-col gap-2 my-2"><input aria-label="Opportunities URL" class="p-2 border border-gray-300 rounded" placeholder="Enter target URL for opportunities" type="text" value=""> <textarea aria-label="Potential Anchors" class="p-2 border border-gray-300 rounded" placeholder="Enter potential anchors, separated by commas" rows="3"></textarea> <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600" data-svelte-h="svelte-1xixxot">Discover Opportunities</button></div> <div class="my-2"> </div></section> <button class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 my-4" data-svelte-h="svelte-ud93ca">Clear Results</button></main> 
 			
 			<script>
 				{
-					__sveltekit_f71omx = {
+					__sveltekit_5d8nzn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/hyperlinks"
 					};
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ciYC4Fhz.js"),
-						import("./_app/immutable/entry/app.CKRvXhpY.js")
+						import("./_app/immutable/entry/start.BN6qpt_E.js"),
+						import("./_app/immutable/entry/app.Bc2uJOj9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
